@@ -3,47 +3,6 @@ package uk.gov.justice.laa.portal.landingpage.service;
 import ch.qos.logback.classic.Level;
 import ch.qos.logback.classic.spi.ILoggingEvent;
 import ch.qos.logback.core.read.ListAppender;
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyList;
-import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.RETURNS_DEEP_STUBS;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
-
-import java.io.IOException;
-import java.time.OffsetDateTime;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Optional;
-import java.util.Set;
-import java.util.UUID;
-import java.util.stream.Collectors;
-
-import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Nested;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
-
 import com.microsoft.graph.core.content.BatchRequestContent;
 import com.microsoft.graph.core.content.BatchResponseContent;
 import com.microsoft.graph.core.requests.BatchRequestBuilder;
@@ -59,6 +18,20 @@ import com.microsoft.graph.users.item.memberof.MemberOfRequestBuilder;
 import com.microsoft.kiota.RequestAdapter;
 import com.microsoft.kiota.RequestInformation;
 import okhttp3.Request;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Nested;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentCaptor;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import uk.gov.justice.laa.portal.landingpage.config.LaaAppsConfig;
 import uk.gov.justice.laa.portal.landingpage.config.MapperConfig;
 import uk.gov.justice.laa.portal.landingpage.dto.AppDto;
@@ -75,6 +48,32 @@ import uk.gov.justice.laa.portal.landingpage.repository.EntraUserRepository;
 import uk.gov.justice.laa.portal.landingpage.repository.OfficeRepository;
 import uk.gov.justice.laa.portal.landingpage.techservices.RegisterUserResponse;
 import uk.gov.justice.laa.portal.landingpage.utils.LogMonitoring;
+
+import java.io.IOException;
+import java.time.OffsetDateTime;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.HashSet;
+import java.util.Iterator;
+import java.util.List;
+import java.util.Optional;
+import java.util.Set;
+import java.util.UUID;
+import java.util.stream.Collectors;
+
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyList;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.RETURNS_DEEP_STUBS;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class UserServiceTest {
@@ -193,38 +192,16 @@ class UserServiceTest {
 
     @Test
     void createUser() {
-        // post user
-        UsersRequestBuilder usersRequestBuilder = mock(UsersRequestBuilder.class, RETURNS_DEEP_STUBS);
-        when(mockGraphServiceClient.users()).thenReturn(usersRequestBuilder);
-        User user = new User();
-        when(mockGraphServiceClient.users().post(any())).thenReturn(user);
-        // get roles
-        UUID appId = UUID.randomUUID();
-        UUID appRoleId = UUID.randomUUID();
-        App app = App.builder()
-                .id(appId)
-                .name("appDisplayName")
-                .build();
-        AppRole appRole = AppRole.builder()
-                .id(appRoleId)
-                .name("appRoleDisplayName")
-                .app(app)
-                .build();
-        app.setAppRoles(Set.of(appRole));
         // assign role
         UUID userId = UUID.randomUUID();
         UserProfile userProfile = UserProfile.builder().activeProfile(true).build();
         EntraUser entraUser = EntraUser.builder().id(userId).userProfiles(Set.of(userProfile)).build();
         userProfile.setEntraUser(entraUser);
-        when(mockAppRoleRepository.findAllById(any())).thenReturn(List.of(appRole));
-        when(mockAppRoleRepository.findByRoleTypeIn(any())).thenReturn(List.of(appRole));
-        when(mockEntraUserRepository.findById(userId)).thenReturn(Optional.of(entraUser));
-        userService.updateUserRoles(userId.toString(), List.of(appRole.getId().toString()));
         RegisterUserResponse.CreatedUser createdUser = new RegisterUserResponse.CreatedUser();
         createdUser.setId("id");
         createdUser.setMail("test.user@email.com");
         RegisterUserResponse registerUserResponse = RegisterUserResponse.builder().createdUser(createdUser).build();
-        when(techServicesClient.registerNewUser(any(EntraUserDto.class), anyList())).thenReturn(registerUserResponse);
+        when(techServicesClient.registerNewUser(any(EntraUserDto.class))).thenReturn(registerUserResponse);
         when(mockEntraUserRepository.saveAndFlush(any())).thenReturn(entraUser);
 
         List<String> roles = new ArrayList<>();
@@ -234,39 +211,18 @@ class UserServiceTest {
         entraUserDto.setLastName("User");
         entraUserDto.setEmail("test.user@email.com");
         FirmDto firm = FirmDto.builder().name("Firm").build();
-        userService.createUser(entraUserDto, roles, new ArrayList<>(), firm, false, "admin");
-        verify(mockEntraUserRepository, times(2)).saveAndFlush(any());
-        verify(techServicesClient, times(1)).registerNewUser(any(EntraUserDto.class), anyList());
+        userService.createUser(entraUserDto, firm, UserType.EXTERNAL_SINGLE_FIRM, "admin");
+        verify(mockEntraUserRepository, times(1)).saveAndFlush(any());
+        verify(techServicesClient, times(1)).registerNewUser(any(EntraUserDto.class));
     }
 
     @Test
     void createUserWithPopulatedDisplayName() {
-        // post user
-        UsersRequestBuilder usersRequestBuilder = mock(UsersRequestBuilder.class, RETURNS_DEEP_STUBS);
-        when(mockGraphServiceClient.users()).thenReturn(usersRequestBuilder);
-        User user = new User();
-        user.setDisplayName("Test User");
-        when(mockGraphServiceClient.users().post(any())).thenReturn(user);
-        // get roles
-        UUID appId = UUID.randomUUID();
-        UUID appRoleId = UUID.randomUUID();
-        App app = App.builder()
-                .id(appId)
-                .name("appDisplayName")
-                .build();
-        AppRole appRole = AppRole.builder()
-                .id(appRoleId)
-                .name("appRoleDisplayName")
-                .app(app)
-                .build();
-        app.setAppRoles(Set.of(appRole));
         // assign role
         UUID userId = UUID.randomUUID();
         UserProfile userProfile = UserProfile.builder().activeProfile(true).build();
         EntraUser entraUser = EntraUser.builder().id(userId).userProfiles(Set.of(userProfile)).build();
         userProfile.setEntraUser(entraUser);
-        when(mockAppRoleRepository.findAllById(any())).thenReturn(List.of(appRole));
-        when(mockAppRoleRepository.findByRoleTypeIn(any())).thenReturn(List.of(appRole));
         List<EntraUser> savedUsers = new ArrayList<>();
         when(mockEntraUserRepository.saveAndFlush(any())).then(invocation -> {
             savedUsers.add(invocation.getArgument(0));
@@ -276,7 +232,7 @@ class UserServiceTest {
         createdUser.setId("id");
         createdUser.setMail("test.user@email.com");
         RegisterUserResponse registerUserResponse = RegisterUserResponse.builder().createdUser(createdUser).build();
-        when(techServicesClient.registerNewUser(any(EntraUserDto.class), anyList())).thenReturn(registerUserResponse);
+        when(techServicesClient.registerNewUser(any(EntraUserDto.class))).thenReturn(registerUserResponse);
 
         List<String> roles = new ArrayList<>();
         roles.add(UUID.randomUUID().toString());
@@ -285,35 +241,15 @@ class UserServiceTest {
         entraUserDto.setLastName("User");
         entraUserDto.setEmail("test.user@email.com");
         FirmDto firm = FirmDto.builder().name("Firm").build();
-        userService.createUser(entraUserDto, roles, new ArrayList<>(), firm, false, "admin");
+        userService.createUser(entraUserDto, firm, UserType.EXTERNAL_SINGLE_FIRM, "admin");
         verify(mockEntraUserRepository, times(1)).saveAndFlush(any());
         assertThat(savedUsers.size()).isEqualTo(1);
         EntraUser savedUser = savedUsers.getFirst();
         assertThat(savedUser.getFirstName()).isEqualTo("Test");
         assertThat(savedUser.getLastName()).isEqualTo("User");
         assertThat(savedUser.getUserProfiles().iterator().next().getFirm().getName()).isEqualTo("Firm");
-        verify(techServicesClient, times(1)).registerNewUser(any(EntraUserDto.class), anyList());
-    }
-
-    @Test
-    public void testUserCreationIsBlockedWhenAppRolesAreNotValid() {
-        UUID appRoleId = UUID.randomUUID();
-        AppRole appRole = AppRole.builder()
-                .id(appRoleId)
-                .name("appRoleDisplayName")
-                .build();
-        EntraUserDto user = new EntraUserDto();
-        user.setFirstName("Test");
-        user.setLastName("User");
-        when(mockAppRoleRepository.findAllById(any())).thenReturn(List.of(appRole));
-        when(mockAppRoleRepository.findByRoleTypeIn(any())).thenReturn(List.of());
-
-        List<String> roles = new ArrayList<>();
-        roles.add(UUID.randomUUID().toString());
-        RuntimeException ex = assertThrows(RuntimeException.class,
-                () -> userService.createUser(user, roles, new ArrayList<>(), null, false, "admin"));
-        assertThat(ex).hasMessageContaining("User creation blocked");
-        verify(mockEntraUserRepository, times(0)).saveAndFlush(any());
+        assertThat(savedUser.getUserProfiles().iterator().next().getUserType()).isEqualTo(UserType.EXTERNAL_SINGLE_FIRM);
+        verify(techServicesClient, times(1)).registerNewUser(any(EntraUserDto.class));
     }
 
     @Test
@@ -1457,6 +1393,21 @@ class UserServiceTest {
         assertThat(userService.isInternal(entraUser)).isFalse();
     }
 
+    @Test
+    void isUserCreationAllowed_Ok() {
+        Set<UserProfile> userProfiles = Set.of(UserProfile.builder().activeProfile(true).userType(UserType.INTERNAL).build());
+        EntraUser entraUser = EntraUser.builder().userProfiles(userProfiles).build();
+        assertThat(userService.isUserCreationAllowed(entraUser)).isTrue();
+    }
+
+    @Test
+    void isUserCreationAllowed_Failed() {
+        Set<UserProfile> userProfiles = Set
+                .of(UserProfile.builder().userType(UserType.EXTERNAL_SINGLE_FIRM_ADMIN).build());
+        EntraUser entraUser = EntraUser.builder().userProfiles(userProfiles).build();
+        assertThat(userService.isUserCreationAllowed(entraUser)).isFalse();
+    }
+
     @Nested
     class UpdateUserDetailsTests {
 
@@ -1931,14 +1882,6 @@ class UserServiceTest {
             user.setFirstName("John");
             user.setLastName("Doe");
 
-            UUID roleId = UUID.randomUUID();
-            AppRole appRole = AppRole.builder().id(roleId).roleType(RoleType.EXTERNAL).build();
-            when(mockAppRoleRepository.findAllById(any())).thenReturn(List.of(appRole));
-            when(mockAppRoleRepository.findByRoleTypeIn(anyList())).thenReturn(List.of(appRole));
-            UUID officeId = UUID.randomUUID();
-            Office office = Office.builder().id(officeId).build();
-            when(mockOfficeRepository.findAllById(any())).thenReturn(List.of(office));
-
             EntraUser savedUser = EntraUser.builder().build();
             when(mockEntraUserRepository.saveAndFlush(any(EntraUser.class))).thenReturn(savedUser);
 
@@ -1946,18 +1889,16 @@ class UserServiceTest {
             createdUser.setId("id");
             createdUser.setMail("test@example.com");
             RegisterUserResponse registerUserResponse = RegisterUserResponse.builder().createdUser(createdUser).build();
-            when(techServicesClient.registerNewUser(any(EntraUserDto.class), anyList())).thenReturn(registerUserResponse);
-            List<String> roles = List.of(roleId.toString());
-            List<String> offices = List.of(officeId.toString());
+            when(techServicesClient.registerNewUser(any(EntraUserDto.class))).thenReturn(registerUserResponse);
             FirmDto firmDto = FirmDto.builder().name("Test Firm").build();
 
             // Act
-            EntraUser result = userService.createUser(user, roles, offices, firmDto, true, "admin");
+            EntraUser result = userService.createUser(user, firmDto, UserType.EXTERNAL_SINGLE_FIRM, "admin");
 
             // Assert
             assertThat(result).isNotNull();
             verify(mockEntraUserRepository).saveAndFlush(any(EntraUser.class));
-            verify(techServicesClient).registerNewUser(any(EntraUserDto.class), anyList());
+            verify(techServicesClient).registerNewUser(any(EntraUserDto.class));
         }
 
         @Test
@@ -1966,10 +1907,6 @@ class UserServiceTest {
             EntraUserDto user = new EntraUserDto();
             user.setEmail("test@example.com");
 
-            when(mockAppRoleRepository.findAllById(any())).thenReturn(Collections.emptyList());
-            when(mockAppRoleRepository.findByRoleTypeIn(anyList())).thenReturn(Collections.emptyList());
-            when(mockOfficeRepository.findAllById(any())).thenReturn(Collections.emptyList());
-
             ArgumentCaptor<EntraUser> userCaptor = ArgumentCaptor.forClass(EntraUser.class);
             when(mockEntraUserRepository.saveAndFlush(userCaptor.capture())).thenReturn(EntraUser.builder().build());
 
@@ -1977,12 +1914,12 @@ class UserServiceTest {
             createdUser.setId("id");
             createdUser.setMail("test@example.com");
             RegisterUserResponse registerUserResponse = RegisterUserResponse.builder().createdUser(createdUser).build();
-            when(techServicesClient.registerNewUser(any(EntraUserDto.class), anyList())).thenReturn(registerUserResponse);
+            when(techServicesClient.registerNewUser(any(EntraUserDto.class))).thenReturn(registerUserResponse);
 
             FirmDto firmDto = FirmDto.builder().name("Test Firm").build();
 
             // Act
-            userService.createUser(user, Collections.emptyList(), Collections.emptyList(), firmDto, false, "admin");
+            userService.createUser(user, firmDto, UserType.EXTERNAL_SINGLE_FIRM, "admin");
 
             // Assert
             EntraUser capturedUser = userCaptor.getValue();
@@ -2126,18 +2063,18 @@ class UserServiceTest {
         assertThat(emptySort.stream().toList().get(1).getDirection()).isEqualTo(Sort.Direction.DESC);
     }
 
-    @Test
-    void getGivenSort() {
-        List<String> fields = List.of("firstName", "lastName", "email", "eMAIl", "lAstName", "USERSTATUS");
-        String sort = "aSc";
-        for (String field : fields) {
-            Sort fieldSort = userService.getSort(field, sort);
-            assertThat(fieldSort.stream().toList().get(0).getProperty().equalsIgnoreCase(field)).isTrue();
-            assertThat(fieldSort.stream().toList().get(0).getDirection()).isEqualTo(Sort.Direction.ASC);
+        @Test
+        void getGivenSort() {
+            List<String> fields = List.of("firstName", "lastName", "email", "eMAIl", "lAstName", "USERSTATUS");
+            String sort = "aSc";
+            for (String field : fields) {
+                Sort fieldSort = userService.getSort(field, sort);
+                assertThat(fieldSort.stream().toList().getFirst().getProperty().equalsIgnoreCase(field)).isTrue();
+                assertThat(fieldSort.stream().toList().getFirst().getDirection()).isEqualTo(Sort.Direction.ASC);
+            }
+            Sort descendingSort = userService.getSort("lastName", "deSC");
+            assertThat(descendingSort.stream().toList().getFirst().getDirection()).isEqualTo(Sort.Direction.DESC);
         }
-        Sort descendingSort = userService.getSort("lastName", "deSC");
-        assertThat(descendingSort.stream().toList().get(0).getDirection()).isEqualTo(Sort.Direction.DESC);
-    }
 
     @Test
     void getErrorSort() {
